--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,17 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    я тут
-
+    <section>
+      <form id="form">
+        <input type="text" name="input" placeholder="Search images..." />
+        <button type="submit">Search</button>
+      </form>
+      <div></div>
+      <ul class="gallery"></ul>
+      <button type="button" class="load-more is-hidden">
+        <span class="load is-hidden"></span>Load more
+      </button>
+    </section>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
